--- a/index.html
+++ b/index.html
@@ -567,9 +567,9 @@
 
         <!-- Profile Card -->
         <div class="profile-card game-card animate-slide-up">
-          <div class="profile-avatar" id="dashboard-avatar" onclick="showAvatarSelector()">🤖</div>
+          <div class="profile-avatar" id="dashboard-avatar" onclick="showAvatarSelector()" title="Click to change avatar">🤖</div>
           <div class="profile-info">
-            <h2 id="dashboard-username" onclick="editUsername()" style="cursor: pointer;">Player</h2>
+            <h2 id="dashboard-username" onclick="editUsername()" style="cursor: pointer;" title="Click to edit username">Player</h2>
             <p id="dashboard-email">player@email.com</p>
             <div class="profile-badges">
               <span class="badge badge-orange">
