--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="DHA-RILYTE WAR - A gamified coding learning platform for BCA students. Master programming through epic bot battles!">
-  <title>DHA-RILYTE WAR - Learn Coding Through Battle</title>
+  <title>DHA-RILYTE WAR</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Orbitron:wght@400;500;600;700;800;900&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
 </head>
